@@ -1,4 +1,8 @@
 
+2017-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobcrun.c [_WIN32]: added missing headers
+
 2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobcrun.c [_WIN32]: allowing tests to result in the expected line
